--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
-    "@fortawesome/pro-light-svg-icons": "5.3.0",
+    "@fortawesome/pro-light-svg-icons": "^5.5.0",
     "@fortawesome/pro-regular-svg-icons": "^5.3.1",
     "@fortawesome/pro-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.2",
@@ -14,12 +14,14 @@
     "classnames": "^2.2.6",
     "d3-scale-chromatic": "^1.3.0",
     "graphql": "^0.13.2",
+    "luxon": "^1.5.0",
     "moment": "^2.22.2",
     "prettier": "^1.14.2",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5",
+    "react-table": "^6.8.6",
     "reactstrap": "^6.4.0",
     "surge": "^0.20.1",
     "victory": "^30.2.0"
