--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "1.1.5",
     "react-table": "^6.8.6",
     "reactstrap": "^6.4.0",
+    "sma": "^0.1.1",
     "surge": "^0.20.1",
     "victory": "^30.2.0"
   },
